--- a/project2/project2/admin/css/main.css
+++ b/project2/project2/admin/css/main.css
@@ -40,15 +40,14 @@ table tr th {
 	padding:5px 10px;
 	color:#ffffff;
 	text-align:left;
-	/*font-weight:bold;
-	letter-spacing:2px;*/
+	font-weight:bold;
+	letter-spacing:2px;
 	border-top:1px solid #060D14;
 	border-bottom:1px solid #060D14;
 }
 table tr td {
 	padding:5px 10px;
 	color:#333333;
-	font-size:12px;
 	letter-spacing:1px;
 	border-bottom:1px solid #dddddd;
 }
@@ -208,17 +207,16 @@ div#navigation ul li a:hover {
 div#content {
 	background:#ffffff;
 	clear:both;
-	/*height:500px;*/
 	padding:25px 10px 10px 10px;
 }
 
 
 /* main content area + page styles */
 div#page {
-	float:right;
+	margin-left:auto;
+	margin-right:auto;
 	padding:10px 20px 10px;
-	width:60%;
-	
+	width:80%;
 	color:#555555;
 	font-size:1.0em;
 }
@@ -280,7 +278,6 @@ div#sidebar p.newsitem {
 }
 div#sidebar p.newsitem span {
 	font-size:0.75em;
-	text-transform:uppercase;
 	color:#ff6600;
 	font-weight:bold;
 	font-family:Verdana, Arial, Helvetica, sans-serif;
@@ -340,7 +337,8 @@ div.footer p a {
 	border-bottom:none;
 	text-decoration:underline;
 }
-Button,.limit {
+
+Button,.searchbtn ,.Edit{
 	-moz-box-shadow: 0px 1px 0px 0px #fff6af;
 	-webkit-box-shadow: 0px 1px 0px 0px #fff6af;
 	box-shadow: 0px 1px 0px 0px #fff6af;
@@ -366,7 +364,7 @@ Button,.limit {
 	text-decoration:none;
 	text-shadow:0px 1px 0px #ffee66;
 }
-Button:hover , .limit:hover {
+Button:hover , .searchbtn:hover ,.Edit:hover{
 	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #ffab23), color-stop(1, #ffec64));
 	background:-moz-linear-gradient(top, #ffab23 5%, #ffec64 100%);
 	background:-webkit-linear-gradient(top, #ffab23 5%, #ffec64 100%);
@@ -376,12 +374,12 @@ Button:hover , .limit:hover {
 	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffab23', endColorstr='#ffec64',GradientType=0);
 	background-color:#ffab23;
 }
-Button:active , .limit:active {
+Button:active , .searchbtn:active ,.Edit:active{
 	position:relative;
 	top:1px;
 
 }
-.pgbtn, .pgbtngo
+.titlebtn, .pgbtn, .pgbtngo, .spgbtn, .spgbtngo
 {
 color: #606060;
 border: solid 1px #b7b7b7;
@@ -390,15 +388,101 @@ background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#eded
 font-size: 11px;
 padding: .2em 1em .275em;
 }
-.r td
-{
-font-size:16px;
-padding: 10px 10px 10px;
-}
-.r :nth-child(even)
+div#Result:nth-child(odd)
 {
  background-color: #F4F1E6;
- 
+
+}
+/*######## Smart Green ########*/
+.smart-green {
+    margin-left:auto;
+    margin-right:auto;
+
+    max-width: 500px;
+    background: #F8F8F8;
+    padding: 30px 30px 20px 30px;
+    font: 12px Arial, Helvetica, sans-serif;
+    color: #666;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+}
+.smart-green h1 {
+    font: 24px "Trebuchet MS", Arial, Helvetica, sans-serif;
+    padding: 20px 0px 20px 40px;
+    display: block;
+    margin: -30px -30px 10px -30px;
+    color: #FFF;
+    background: #9DC45F;
+    text-shadow: 1px 1px 1px #949494;
+    border-radius: 5px 5px 0px 0px;
+    -webkit-border-radius: 5px 5px 0px 0px;
+    -moz-border-radius: 5px 5px 0px 0px;
+    border-bottom:1px solid #89AF4C;
+
+}
+.smart-green h1>span {
+    display: block;
+    font-size: 11px;
+    color: #FFF;
+}
+
+.smart-green label {
+    display: block;
+    margin: 0px 0px 5px;
+}
+.smart-green label>span {
+    float: left;
+    margin-top: 10px;
+    color: #5E5E5E;
+}
+.smart-green label>p
+{
+ float: right;
+ margin-top: 10px;
+    color: #5E5E5E;
+}
+.smart-green input[type="text"], .smart-green input[type="email"],.smart-green input[type="url"], .smart-green textarea, .smart-green select , .smart-green p{
+    color: #555;
+    height: 30px;
+    line-height:15px;
+    width: 100%;
+    padding: 0px 0px 0px 10px;
+    margin-top: 2px;
+    border: 1px solid #E5E5E5;
+    background: #FBFBFB;
+    outline: 0;
+    -webkit-box-shadow: inset 1px 1px 2px rgba(238, 238, 238, 0.2);
+    box-shadow: inset 1px 1px 2px rgba(238, 238, 238, 0.2);
+    font: normal 14px/14px Arial, Helvetica, sans-serif;
+}
+.smart-green textarea{
+    height:100px;
+    padding-top: 10px;
+}
+.smart-green select {
+    background: url('down-arrow.png') no-repeat right, -moz-linear-gradient(top, #FBFBFB 0%, #E9E9E9 100%);
+    background: url('down-arrow.png') no-repeat right, -webkit-gradient(linear, left top, left bottom, color-stop(0%,#FBFBFB), color-stop(100%,#E9E9E9));
+   appearance:none;
+    -webkit-appearance:none; 
+   -moz-appearance: none;
+    text-indent: 0.01px;
+    text-overflow: '';
+    width:100%;
+    height:30px;
+}
+.smart-green .button {
+    background-color: #9DC45F;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-border-radius: 5px;
+    border: none;
+    padding: 10px 25px 10px 25px;
+    color: #FFF;
+    text-shadow: 1px 1px 1px #949494;
+}
+.smart-green .button:hover {
+    background-color:#80A24A;
 }
 
 
